src/agents/k8s/aws/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nfrguard-agents
  labels:
    name: nfrguard-agents
    environment: production
